--- a/css/estilo.css
+++ b/css/estilo.css
@@ -218,11 +218,19 @@ h1,h2,h3,h4,h5{
 	
 }
 .group__title{
-	font-family:'Sacramento',cursive;
+	font-family:'Yellowtile', cursive;
 	text-align: center;
-	font-weight: bold;
 	font-size: 1.8em;
 	margin: 30px;
+}
+.group__galeria{
+	font-family:'Yellowtail', cursive;
+	color: white;
+	text-align: center;
+	font-size: 3.0em;
+	margin: 30px;
+	background-color: rgb(236, 86, 119);
+	padding: 10px;
 }
 
 .today-special .column {
@@ -273,6 +281,80 @@ h1,h2,h3,h4,h5{
 	position: relative;
 	top: 3px;
 	right: 5px;
+}
+/*---------------------Form-----------------------*/
+.campos{
+	font-family: 'Pacifico',cursive; 
+	font-size: 30px;
+	font-weight: bold;
+	max-width: 700px;
+	width: 100%;
+	background: #eacaee;
+	padding: 25px;
+	border-radius: 8px;
+	box-shadow: 0 0 7px rgba(0,0,0, 0.1);
+	position: relative;
+}
+.formulario{
+	justify-content: center;
+	display: flex;
+	align-items: center;
+	margin-bottom: 30px;
+}
+.formulario .campos{
+	margin-top: 30px;
+}
+.form{
+	width: 100%;
+	margin-top: 20px;
+}
+.form label{
+	color: #410649;
+}
+.campos .form input{
+	position: relative;
+	height: 40px;
+	width: 100%;
+	outline: none;
+	border: 1px solid #ddd;
+	border-radius: 6px;
+	padding: 0 15px;
+	font-size: 1.04rem;
+	color: #a19e9e;
+	font-family: "Advent Pro", sans-serif;
+	margin-top: 8px;
+}
+.campos .mensaje input{
+	height: 100px;
+	align-content: s;
+
+}
+.campos .columna{
+	display: flex;
+	column-gap: 15px;
+}
+input, textarea{
+	width: 100%;
+	padding: 10px;
+	outline: none;
+	border: 1px solid #ddd;
+	color: #a19e9e;
+	font-family: "Advent Pro", sans-serif;
+	margin-top: 8px;
+	border-radius: 6px;
+	font-size: 1.04rem;
+}
+/*----------------Mapa------------------*/
+.mapa{
+	display: block;
+	align-items: center;
+	justify-content: center;
+	margin-left: 30px;
+
+	margin-top: 75px;
+}
+.cont2{
+	display: flex;
 }
 
 /*----------------Estilos Responsivos------------------*/
@@ -390,8 +472,7 @@ h1,h2,h3,h4,h5{
 	.main__about_description .column--50:nth-child(2) .column__txt
 	{
 		line-height: 55px;
-		text-align: justify;
-		
+		text-align: left;
 	}
 	.group__title{
 		font-size: 2.5em;
