--- a/css/estilo.css
+++ b/css/estilo.css
@@ -195,11 +195,14 @@ h1,h2,h3,h4,h5{
 	font-style: oblique;
 	text-align: left;
 	font-size: 1.5em;
-	
 }
 .main_txt2{
-	padding-left: 100px;
-	padding-right: 100px;
+	padding-left: 300px;
+	padding-right: 300px;
+	font-family: 'Lora', serif;
+	font-style: oblique;
+	text-align: center;
+	font-size: 1.5em;
 }
 .column__title{
 	font-size: 1.3em;
@@ -307,10 +310,16 @@ h1,h2,h3,h4,h5{
 	margin-top: 30px;
 }
 .form{
-	width: 70%;
+	width: 50%;
 	margin-top: 20px;
 	margin-right: 100px;
-	margin-left: 200px;
+	margin-left: 500px;
+}
+.form_qu{
+	width: 50%;
+	margin-top: 20px;
+	margin-right: 100px;
+	margin-left: 250px;
 }
 .form label{
 	color: #410649;
@@ -330,6 +339,7 @@ h1,h2,h3,h4,h5{
 }
 .campos .mensaje input{
 	height: 100px;
+	display: block;
 	align-content: s;
 
 }
